--- a/.github/workflows/pytorch.yaml
+++ b/.github/workflows/pytorch.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   fetch-and-rebase:
-    runs-on: self-hosted
+    runs-on: Ascend910B-01
     steps:
       - name: Pull latest codes
         run: |
@@ -36,7 +36,7 @@ jobs:
       #     git submodule foreach git clean -dfx &&
       #     popd
   compile-and-test:
-    runs-on: self-hosted
+    runs-on: Ascend910B-01
     needs: fetch-and-rebase
     defaults:
       run:
