--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -17,15 +17,14 @@ jobs:
     steps:
       - name: Pull latest codes
         run:
-          sudo su - root -c "source /root/.bashrc && 
-          conda activate py38 &&
-          pushd /root/Git.d/onnxruntime &&
+          sudo su - root -c "pushd /root/Git.d/onnxruntime &&
           git fetch --all &&
           git rebase upstream/main &&
           git submodule update --init --recursive &&
           git reset --hard HEAD &&
           git clean -dfx &&
           popd"
+
       - name: Build and test onnx runtime
         run:
           sudo su - root -c "pushd /root/Git.d/onnxruntime &&
