--- a/.github/workflows/deepspeed.yaml
+++ b/.github/workflows/deepspeed.yaml
@@ -88,7 +88,7 @@ jobs:
       run: |
         source /root/.bashrc
         echo "y" | apt-get install git
-        git clone https://github.com/microsoft/DeepSpeed.git
+        git clone --depth=1 https://github.com/microsoft/DeepSpeed.git
         cd DeepSpeed
         pip install .[1bit,npu,autotuning,inf] -i  https://pypi.tuna.tsinghua.edu.cn/simple
         ds_report
