--- a/.github/workflows/deepspeed.yaml
+++ b/.github/workflows/deepspeed.yaml
@@ -68,6 +68,15 @@ jobs:
             print(f"Device Count: {torch.npu.device_count()}")
             print(f"Device Available: {torch.npu.is_available()}")
         EOF
+
+    - name: Install transformers
+      run: |
+        source /root/.bashrc
+        echo "y" | apt-get install git
+        git clone https://github.com/huggingface/transformers
+        cd transformers
+        git rev-parse --short HEAD
+        pip install . -i https://pypi.tuna.tsinghua.edu.cn/simple
              
     - name: Install deepspeed
       run: |
