--- a/requirements/requirements_deepspeed.txt
+++ b/requirements/requirements_deepspeed.txt
@@ -1,6 +1,7 @@
 accelerate
 clang-format==18.1.3
 comet_ml>=3.41.0
+# deepspeed-kernels ; sys_platform == 'linux'
 docutils<0.18
 future
 importlib-metadata>=4
@@ -18,11 +19,11 @@ tensorboard
 torchvision
 transformers>=4.39.0
 wandb
-google
-lm-eval==0.3.0
-protobuf
-qtorch
-safetensors
-sentencepiece
-transformers>=4.32.1
-tabulate
+# google
+# lm-eval==0.3.0
+# protobuf
+# qtorch
+# safetensors
+# sentencepiece
+# transformers>=4.32.1
+# tabulate
