--- a/.github/workflows/deepspeed.yaml
+++ b/.github/workflows/deepspeed.yaml
@@ -40,6 +40,7 @@ jobs:
       options: --network host
                --name deepspeed_unit-tests
                --device /dev/davinci4
+               --device /dev/davinci6
                --device /dev/davinci_manager
                --device /dev/devmm_svm
                --device /dev/hisi_hdc
