--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -49,6 +49,13 @@ jobs:
 
     - name: Install llamacpp
       run: |
+        npu-smi info
+        apt-get update 
+        apt-get install sudo
+        pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+        echo "y" | apt-get install git
+        source /root/.bashrc
+        
         git clone https://github.com/ggerganov/llama.cpp.git
         cd llama.cpp
         cmake -B build
