--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -48,18 +48,23 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install llamacpp
-      run: |
-        npu-smi info
-        apt-get update 
-        apt-get install sudo
-        pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
-        echo "y" | apt-get install git
-        source /root/.bashrc
-        
-        git clone https://github.com/ggerganov/llama.cpp.git
-        cd llama.cpp
-        cmake -B build
-        cmake --build build --config Release
+      uses: nick-fields/retry@v3
+      with:
+        timeout_minutes: 30
+        max_attempts: 3
+        retry_on: error
+        command: | 
+          npu-smi info
+          apt-get update 
+          apt-get install sudo
+          pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+          echo "y" | apt-get install git
+          source /root/.bashrc
+          
+          git clone https://github.com/ggerganov/llama.cpp.git
+          cd llama.cpp
+          cmake -B build
+          cmake --build build --config Release
     
 
 
