--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -56,9 +56,9 @@ jobs:
         command: | 
           npu-smi info
           apt-get update 
-          apt-get install sudo cmake
-          pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+          echo "y" | apt-get install cmake 
           echo "y" | apt-get install git
+          pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           source /root/.bashrc
           
           git clone https://github.com/ggerganov/llama.cpp.git
