--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -56,9 +56,7 @@ jobs:
         command: | 
           npu-smi info
           apt-get update 
-          echo "yy" | apt-get install cmake make
-          echo "y" | apt-get install git
-          echo "y" | apt-get install build-essential
+          apt-get install cmake make git build-essential -y
           pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           source /root/.bashrc
 
