--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -25,24 +25,24 @@ permissions:
 
 jobs:
   unit-tests:
-    runs-on: [self-hosted, ascend, npu]
-    container:
-      image: ascendai/cann
-      ports:
-        - 80
-      volumes:
-        - /usr/local/dcmi:/usr/local/dcmi
-        - /usr/local/bin/npu-smi:/usr/local/bin/npu-smi 
-        - /usr/local/Ascend/driver/lib64/:/usr/local/Ascend/driver/lib64/
-        - /usr/local/Ascend/driver/version.info:/usr/local/Ascend/driver/version.info
-        - /etc/ascend_install.info:/etc/ascend_install.info   
-      options: --network host
-               --name llamacpp_build
-               --device /dev/davinci5
-               --device /dev/davinci_manager
-               --device /dev/devmm_svm
-               --device /dev/hisi_hdc
-               --entrypoint /bin/bash
+    runs-on: ascendai/cann
+    # container:
+    #   image: ascendai/cann
+    #   ports:
+    #     - 80
+    #   volumes:
+    #     - /usr/local/dcmi:/usr/local/dcmi
+    #     - /usr/local/bin/npu-smi:/usr/local/bin/npu-smi 
+    #     - /usr/local/Ascend/driver/lib64/:/usr/local/Ascend/driver/lib64/
+    #     - /usr/local/Ascend/driver/version.info:/usr/local/Ascend/driver/version.info
+    #     - /etc/ascend_install.info:/etc/ascend_install.info   
+    #   options: --network host
+    #            --name llamacpp_build
+    #            --device /dev/davinci5
+    #            --device /dev/davinci_manager
+    #            --device /dev/devmm_svm
+    #            --device /dev/hisi_hdc
+    #            --entrypoint /bin/bash
                               
     steps:
     - uses: actions/checkout@v4
@@ -54,22 +54,21 @@ jobs:
         max_attempts: 3
         retry_on: error
         command: | 
-          npu-smi info
           apt-get update 
           apt-get install cmake make git build-essential -y
           pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           source /root/.bashrc
 
-          gcc --version
           git clone https://github.com/ggerganov/llama.cpp.git
           
           
     - name: Build 
       run: |
           cd llama.cpp
-          make
-          # cmake -B build
-          # cmake --build build --config Release
+          mdkir build
+          cd build
+          cmake .. -DCMAKE_BUILD_TYPE=release
+          cmake --build . --config Release -j $(nproc)
     
 
 
