--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -38,8 +38,8 @@ jobs:
         max_attempts: 3
         retry_on: error
         command: | 
-          apt-get update 
-          apt-get install cmake -y
+          yum update 
+          yum install git cmake -y
           pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
 
           git clone https://github.com/ggerganov/llama.cpp.git
