--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -27,6 +27,11 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ascendai/cann:8.0.rc2.beta1-910b-openeuler22.03-py3.9
+
+    strategy:
+      matrix:
+        cann: ['8.0.rc2.beta1']
+        build: ['cann']  
                               
     steps:
     - uses: actions/checkout@v4
