--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -28,11 +28,11 @@ jobs:
 
     strategy:
       matrix:
-        cann: ['8.0.rc2.beta1']
+        cann: ['python3.9-cann8.0.rc2.beta1','python3.10-cann8.0.rc3.beta1']
         build: ['Release']
 
     container:
-      image: ascendai/cann:${{ matrix.cann }}-910b-openeuler22.03-py3.9
+      image: ascendai/cann:openeuler-${{ matrix.build }}
 
     steps:
     - uses: actions/checkout@v4
