--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -28,7 +28,7 @@ jobs:
 
     strategy:
       matrix:
-        cann: ['python3.9-cann8.0.rc2.beta1']
+        cann: ['python3.10-cann8.0.rc3.beta1']
         build: ['Release']
 
     container:
@@ -46,7 +46,8 @@ jobs:
         command: |
           yum update -y
           yum install git cmake gcc gcc-c++ make -y
-
+          source /root/.bashrc
+          
           git clone https://github.com/ggerganov/llama.cpp.git
 
     - name: Build
