--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -51,8 +51,9 @@ jobs:
 
     - name: Build
       run: |
-          # source /root/.bashrc
-          # export LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/lib64:${LIBRARY_PATH}
+          echo "-----------111111111-----------------"
+          echo $LIBRARY_PATH
+          echo "----------111111111111------------------"
           cd llama.cpp
           mkdir build
           cd build
