--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -57,8 +57,7 @@ jobs:
           cd llama.cpp
           mkdir build
           cd build
-          cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DGGML_CANN=on
-          cmake --build . -j $(nproc)
+          cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DGGML_CANN=on && make -j32
           
   ubuntu-unit-tests:
     runs-on: ubuntu-latest
@@ -89,8 +88,7 @@ jobs:
           cd llama.cpp
           mkdir build
           cd build
-          cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DGGML_CANN=on
-          cmake --build . -j32
+          cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DGGML_CANN=on && make -j32
 
 
 
