--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -51,6 +51,7 @@ jobs:
 
     - name: Build
       run: |
+          source ~/.bashrc
           echo "-----------111111111-----------------"
           echo $LIBRARY_PATH
           echo "----------111111111111------------------"
@@ -82,6 +83,7 @@ jobs:
 
     - name: Build
       run: |
+          source ~/.bashrc
           echo "-----------111111111-----------------"
           echo $LIBRARY_PATH
           echo "----------111111111111------------------"
