--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Build
       run: |
-          source ~/.bashrc
+          source /usr/local/Ascend/ascend-toolkit/set_env.sh
           echo "-----------111111111-----------------"
           echo $LIBRARY_PATH
           echo "----------111111111111------------------"
@@ -83,7 +83,7 @@ jobs:
 
     - name: Build
       run: |
-          source ~/.bashrc
+          source /usr/local/Ascend/ascend-toolkit/set_env.sh
           echo "-----------111111111-----------------"
           echo $LIBRARY_PATH
           echo "----------111111111111------------------"
