--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -1,8 +1,8 @@
 name: llama.cpp
 
-# defaults:
-#   run:
-#     shell: bash -el {0}
+defaults:
+  run:
+    shell: bash -el {0}
 on:
   workflow_dispatch:
   pull_request:
@@ -62,17 +62,17 @@ jobs:
           mkdir build
           cd build
           
-          export ASCEND_TOOLKIT_HOME=/usr/local/Ascend/ascend-toolkit/latest
-          export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/lib64:${ASCEND_TOOLKIT_HOME}/lib64/plugin/opskernel:${ASCEND_TOOLKIT_HOME}/lib64/plugin/nnengine:${ASCEND_TOOLKIT_HOME}/opp/built-in/op_impl/ai_core/tbe/op_tiling/lib/linux/$(arch):$LD_LIBRARY_PATH
-          export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/tools/aml/lib64:${ASCEND_TOOLKIT_HOME}/tools/aml/lib64/plugin:$LD_LIBRARY_PATH
-          export PYTHONPATH=${ASCEND_TOOLKIT_HOME}/python/site-packages:${ASCEND_TOOLKIT_HOME}/opp/built-in/op_impl/ai_core/tbe:$PYTHONPATH
-          export PATH=${ASCEND_TOOLKIT_HOME}/bin:${ASCEND_TOOLKIT_HOME}/compiler/ccec_compiler/bin:${ASCEND_TOOLKIT_HOME}/tools/ccec_compiler/bin:$PATH
-          export ASCEND_AICPU_PATH=${ASCEND_TOOLKIT_HOME}
-          export ASCEND_OPP_PATH=${ASCEND_TOOLKIT_HOME}/opp
-          export TOOLCHAIN_HOME=${ASCEND_TOOLKIT_HOME}/toolkit
-          export ASCEND_HOME_PATH=${ASCEND_TOOLKIT_HOME}
+          # export ASCEND_TOOLKIT_HOME=/usr/local/Ascend/ascend-toolkit/latest
+          # export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/lib64:${ASCEND_TOOLKIT_HOME}/lib64/plugin/opskernel:${ASCEND_TOOLKIT_HOME}/lib64/plugin/nnengine:${ASCEND_TOOLKIT_HOME}/opp/built-in/op_impl/ai_core/tbe/op_tiling/lib/linux/$(arch):$LD_LIBRARY_PATH
+          # export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/tools/aml/lib64:${ASCEND_TOOLKIT_HOME}/tools/aml/lib64/plugin:$LD_LIBRARY_PATH
+          # export PYTHONPATH=${ASCEND_TOOLKIT_HOME}/python/site-packages:${ASCEND_TOOLKIT_HOME}/opp/built-in/op_impl/ai_core/tbe:$PYTHONPATH
+          # export PATH=${ASCEND_TOOLKIT_HOME}/bin:${ASCEND_TOOLKIT_HOME}/compiler/ccec_compiler/bin:${ASCEND_TOOLKIT_HOME}/tools/ccec_compiler/bin:$PATH
+          # export ASCEND_AICPU_PATH=${ASCEND_TOOLKIT_HOME}
+          # export ASCEND_OPP_PATH=${ASCEND_TOOLKIT_HOME}/opp
+          # export TOOLCHAIN_HOME=${ASCEND_TOOLKIT_HOME}/toolkit
+          # export ASCEND_HOME_PATH=${ASCEND_TOOLKIT_HOME}
 
-          cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DGGML_CANN=on && make -j32
+          cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DGGML_CANN=on && cmake --build .. --config release
           
   ubuntu-unit-tests:
     runs-on: ubuntu-latest
